...

  return (
    <View style={[styles.section, style]}>
      <SectionHeader title={t('Quick access')} />
      <View style={styles.row}>
        <QuickAccessCard
          title={t('Create new trip')}
          subtitle={t('Let’s create your next trip with friends')}
          buttonTitle={t('New trip')}
          onPress={onCreateTrip}
          illustration={
            <Image
              source={require('../../../../assets/images/missions/homeTripMap.png')}
...
